--- a/faculty.html
+++ b/faculty.html
@@ -16,10 +16,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
     li {
-
-
         flex-direction: row;
-        background-color: red;
         margin-right: 10%;
         margin-left: 0%;
         font-size: 20px;
@@ -95,7 +92,9 @@
 
 <body>
 
-
+<div class="main">
+    <h1>Faculty Detials</h1>
+</div>
 
 
     <div class="container">
